# tjm-automation-task

./: README.md  example.env  pyproject.toml  run_cv_lab.bat  run_fsm_telemetry.bat  run_notepad_cv.bat  run_notepad_cv_first.bat  run_notepad_vlm.bat  run_notepad_vlm_first.bat  run_vlm_lab.bat  setup.bat
src/: __init__.py  config.py  core.py  drivers.py  fsm_telemetry.py  main.py  monitoring.py  notepad_automation.py  notepad_task.py  screenshot_service.py  strategies.py  utils.py
src/cv_solution/: constants.py  engine.py  gui.py  models.py  utils.py
src/cv_solution/processors/: fusion.py  ocr.py  visual.py
src/cv_strategy/: __init__.py  constants.py  engine.py  gui.py  models.py  utils.py
src/cv_strategy/processors/: __init__.py  fusion.py  ocr.py  visual.py
src/llm_solution/: __init__.py  client.py  engine.py  grounding_engine.py  gui.py  models.py  notepad_automation.py  utils.py
src/opencv_solution/: constants.py  grounding_engine.py  gui.py  notepad_automation.py
src/vlm_solution/: __init__.py  client.py  engine.py  gui.py  models.py  prompts.py  utils.py
src/vlm_strategy/: __init__.py  client.py  engine.py  gui.py  prompts.py  utils.py
